# NASParallelBenchmarks

./: CMakeLists.txt  Makefile  README.md
CG/: CMakeLists.txt  Makefile  README  cg.sac  cg.vers
CG/inputs/: a.inp  b.inp  c.inp  d.inp  s.inp  w.inp
EP/: APLembar.sac  CMakeLists.txt  Makefile  embar.sac
FT/: CMakeLists.txt  Makefile  fft_cpx.sac  fft_dbl.sac
FT/fft/: Cpx.dec  Cpx.sac  Cpx2.dec  Cpx2.sac  Support.dec  Support.sac  cpx_test.sac  fft-yu.sac  fft.W.c  fft.W.noPHM.c  fft.sac  fft_beauty.sac  fft_constrofu.sac  fft_cpx.sac  fft_dbl.sac  fft_dbl_sim.sac  fft_diss.W.c  fft_realcpx.W.c  fft_realcpx_nowls.W.c  sac-ft_iter.sac  sac-ft_rec.sac  times.txt  timings.txt  use_acn.sac  use_cpx.sac
MG/: CMakeLists.txt  Makefile  README  mg_rotate.sac  mg_with_borders.sac
MG/inputs/: Makefile  NASmg.inp.128_1  NASmg.inp.128_5  NASmg.inp.256_5  NASmg.inp.64_10  NASmg.inp.64_15  NASmg.inp.64_20  NASmg.inp.64_25  NASmg.inp.64_5  NASmg_with_borders.inps
Makefiles/old/: Makefile.Clibs  Makefile.check  Makefile.run
